# middleclick.wtf

./: .gitignore  Makefile  README.md  main.tf  package-lock.json  package.json  provider.tf  variables.tf
ansible/: apache2.conf  api.service  images-le-ssl.conf  images-le-ssl.conf.j2  images.conf  images.conf.j2  playbook.yml
ansible/vars/: dev.yml  prod.yml
api/: Cargo.toml
api/src/: main.rs
public/: 404.html  index.html  index.js
public/redirect/: index.html
src/: styles.css
terraform/vars/: dev.tfvars  prod.tfvars
