[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
infer = "0.15.0"
log = "0.4.19"
odht = "0.3.1"
rand = "0.8.5"
sha2 = "0.10.7"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["fs", "sync", "macros", "rt-multi-thread"] }
